<resources>
    <string name="app_name">StoresApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">usuario</string>
    <string name="nav_header_subtitle">correo@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Inicia Sesión</string>
    <string name="textView">¿Aún no tienes cuenta?</string>
    <string name="loginButton">Ingresar</string>
    <string name="createButton">Crea una cuenta</string>
    <string name="topimage">TopImage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store">Establecimientos</string>
    <string name="home">Inicio</string>
    <string name="map">Mapa</string>
    <string name="add_store">Añadir establecimiento</string>
    <string name="storeimage">imageStr</string>
    <string name="ground">ground</string>
    <string name="cardText">…</string>
    <string name="owner">propietario</string>
    <string name="storeName">nombre</string>
    <string name="CreateAccountText">Crea una cuenta</string>
    <string name="store_name">Establecimiento</string>
    <string name="owner_store">Dueño</string>
    <string name="newEmail">Correo</string>
    <string name="newAccountText">Ingresa un nombre de usuario, un correo electronico y una contraseña</string>
    <string name="createAccountButton">Crear cuenta</string>
    <string name="newPassword">Contraseña</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="textviewStore">Escribe el nombre de la tienda y su propietario</string>
    <string name="buttonmap">buttonMap</string>
    <string name="newUserName">Nombre de usuario</string>

</resources>