<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/storesFragment"
            android:icon="@drawable/ic_baseline_storefront_24"
            android:title="@string/store" />
        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/map" />
        <item
            android:id="@+id/newStoreFragment"
            android:icon="@drawable/ic_baseline_add_business_24"
            android:title="@string/add_store" />

    </group>
</menu>