<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="-28dp"
        android:layout_marginBottom="541dp"
        android:contentDescription="@string/topimage"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroud"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="277dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="399dp"

        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="12dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:fontFamily="@font/roboto_mono_bold"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#373333"
        android:textColorHint="#B74E4747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="308dp"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/roboto_mono_bold"
        android:foregroundTintMode="add"
        android:gravity="left|center_vertical"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#373333"
        android:textColorHint="#B74E4747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/displayEmail"
        android:layout_width="231dp"
        android:layout_height="50dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="488dp"
        android:fontFamily="@font/bad_script"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#373333"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="536dp"
        android:layout_marginBottom="153dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/textView"
        android:textColor="#534C4C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="224dp"
        android:layout_height="52dp"
        android:layout_marginTop="458dp"
        android:layout_marginBottom="222dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_mono_bold"
        android:hapticFeedbackEnabled="true"
        android:text="@string/loginButton"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/createAcountId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="136dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/CreateAccountText"
        android:textColor="#5C8BA6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>