<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="43dp"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/roboto_mono_bold"
        android:hint="@string/newPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#373333"
        android:textColorHint="#B74E4747"
        app:layout_constraintBottom_toTopOf="@+id/newAccoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newAccoutButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="198dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/createAccountButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="29dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/roboto_mono_bold"
        android:hint="@string/newEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#373333"
        android:textColorHint="#B74E4747"
        app:layout_constraintBottom_toTopOf="@+id/newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newUserName"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="25dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/roboto_mono_bold"
        android:hint="@string/newUserName"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#373333"
        android:textColorHint="#B74E4747"
        app:layout_constraintBottom_toTopOf="@+id/newEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="551dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/newAccountText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarId"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>